style/style.css
:root {
	--button-diameter: 4rem;
	--reach: calc(var(--button-diameter) * 6);
	--padding: 0px;

	color: rgba(0, 0, 0, 0.8);
	background-color: white;

	/* colors */
	--gray: rgba(128, 128, 128, 0.25);
	--grayer: #888;
	--border: 3px solid;
}
body {
	padding: 0px;
	margin: 0px;
	box-sizing: border-box;
	width: 100vw;
	height: 100vh;
	overflow: hidden;

	display: flex;
	flex-flow: column nowrap;
}
button {
	color: inherit;
	--color: var(--gray);
	background-color: var(--color);
	border: var(--border);
	border-radius: 0.3em;
	margin: 0.15em;
} button:focus {
	outline: none;
} button:active {
	filter: brightness(200%);
	border: var(--border);
}


.flex-container{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.settings-menu{
	display:block;
	height: 100%;
	width: 100%;
	background-color: grey;
} #nav-options button{
	display: inline-block;
	color: inherit;
	text-align: center;
	width:32%;
	background-color: var(--color);
	border-radius:0;
}

#settings-options{
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}
.slider{
	-webkit-appearance: none; 
	background:none;
	border: 1px black;
	outline: none;
	opacity: 0.7;

}
.small {
	font-size:  calc(var(--button-diameter) / 3);
	margin: 0.8em;
	align-self: flex-start;
} #left .small { /* TODO left and right is unused */
	border-top-left-radius: 1em;
	border-bottom-left-radius: 1em;
	padding-left: 0.5em;
} #right .small {
	border-top-right-radius: 1em;
	border-bottom-right-radius: 1em;
	padding-right: 0.5em;
}

.display {
	display: block;
	font-size: 20px;
	background-color:	var(--gray); 
	margin: 0px;
	padding: 0.3em;
	text-align: center;
}

#input {
	-webkit-user-select: none;
	-moz-user-select: -moz-none;
	-ms-user-select: none;
	-select: none;

	flex: 1;
	box-sizing: border-box;
	width: 100%;
	height: auto;
	padding: 0px 20px 20px 20px;

	display: flex;
	flex-direction: row;
	align-items: flex-end;
	align-content: stretch;
	justify-content: space-between;
}
#left, #right {
	flex: 1;
	max-width: var(--reach);
	box-sizing: border-box;
	height: min(100%, var(--reach));

	display: flex;
	align-items: flex-end;
	align-content: stretch;
	flex-wrap: wrap;
	justify-content: space-between;
} #left {
	flex-direction: row;
} #right {
	flex-direction: row-reverse;
}
#mode {
	--size: calc(var(--button-diameter) * 1.5);
	width: var(--size);
	height: var(--size);
	border: var(--border);
	border-radius: calc(var(--size) / 2);
} #mode img {
	display: block;
	image-rendering: pixelated;
	--subsize: calc(var(--size) * 0.6);
	width: var(--subsize);
	height: var(--subsize);
	margin: auto;
}

.cluster {
	--rotation: 45deg;
	transform: rotate(var(--rotation));
} .cluster.of-2 {
	margin-bottom: calc( var(--button-diameter) / 2);
} .cluster.of-3 {
	--rotation: 0deg;
} .cluster.of-4 {
	margin-bottom: calc( var(--button-diameter) / 4);
} #left .cluster.of-4 {
	margin-left: calc( var(--button-diameter) / 4);
} #right .cluster.of-4 {
	margin-right: calc( var(--button-diameter) / 4);
}.cluster button {
	transform: rotate(calc( 0deg - var(--rotation) ));
	font-size:  calc(var(--button-diameter) / 1.5);
	width: 1.5em;
	height: 1.5em;
	border-radius: .75em;
}

.joystick {
	--size: calc(var(--button-diameter) * 3);
	width: var(--size);
	height: var(--size);
	border: var(--border);
	border-radius: calc(var(--size) / 2);

	display: flex;
	justify-content: center;
	align-items: center;
}
.joystick button {
	position: relative;
	--subsize: calc(var(--size) / 2);
	width: var(--subsize);
	height: var(--subsize);
	border-radius: calc(var(--subsize) / 2);
}
/* xbox layout */
#gp-east { --color: #ff5640; }
#gp-east::after { content: "B"; }

#gp-north { --color: #f9ff3d; }
#gp-north::after { content: "Y"; }

#gp-west { --color: #3da1ff; }
#gp-west::after { content: "X"; }

#gp-south { --color: #53ff40; }
#gp-south::after { content: "A"; }

